--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,40 +1,32 @@
 {% load socialaccount %}
+
+{%block body%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>LOGIN/SIGNUP</title>
+  <title>Responsive login form with social media login buttons</title>
   <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<style>
-#nav{
-    color:white;
-}
-</style>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" id="nav">My Awesome Cart</a>
- </nav> 
+<a class="navbar-brand" id="nav">Welcome To My Awesome Cart !!</a>
+</nav>
 
-<div class="login-form">
-  <form>
-    <h2>Please Login</h2>
-    <div class="social-btn">
-      <button type="submit" class="twitter-btn"><a href="{% provider_login_url 'google' %}"></a><i class="fa fa-google" aria-hidden="true"></i> Login with Google</button>
-      <button type="submit" class="facebook-btn"><a href="{% provider_login_url 'facebook' %}"></a><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button>
-    </div>
-  </form>
-</div>
-</body>
-</html>
+
 <style type="text/css">
-body {
-    background-size: 1370px;
-    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg');
 
+#nav{
+    color: white;
+}
+
+body {
+    background-color: #fbfbfb;
+    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
 }
 .login-form {
     font-family: arial;
@@ -43,12 +35,11 @@ body {
 .login-form form {
     width: 500px;
     position: relative;
-    top: 110px;
+    top: 120px;
     margin: 0 auto;
     padding: 20px 30px 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    box-sizing: border-box;
     background-color: #ffffff;
 }
 .login-form h2 {
@@ -60,8 +51,8 @@ body {
     width: 100%;
     border: 1px solid #ddd;
     padding: 5px 10px;
-    height: 60px;
-    margin: 0px 0px 0px;
+    height: 45px;
+    margin: 0px 0px 20px;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 17px;
@@ -95,7 +86,7 @@ body {
 }
 .social-btn button.twitter-btn, .social-btn button.facebook-btn {
     width: 100%;
-    font-size: 18px;
+    font-size: 22px;
     margin: 0px 0px 10px;
 }
 .social-btn button.twitter-btn{
@@ -104,9 +95,12 @@ body {
 .social-btn button.facebook-btn{
   background-color: #3f68be;
 }
+.social-btn {
+    padding-top: -5px;
+    margin-top: 20px;
+}
 .social-btn button i {
     margin-right: 5px;
-    font-size: 20px;
 }
 @media (max-width: 767px){
 .login-form form {
@@ -114,27 +108,32 @@ body {
     padding: 20px 15px 20px;
 }
 .social-btn button.twitter-btn, .social-btn button.facebook-btn {
-    font-size: 15px;
+    font-size: 20px;
 }
-} 
+}
 </style>
-  <!-- Optional JavaScript -->
+
+
+
+<div class="login-form">
+  <form>
+    <h2>Login</h2>
+    <div class="social-btn">
+
+      <a href="{% provider_login_url 'google' %}" style="text-decoration:none"><button type="button" class="twitter-btn"><i class="fa fa-google" aria-hidden="true"></i>Login with Google</button></a>
+
+      <a href="{% provider_login_url 'facebook' %}" style="text-decoration:none"><button type="button" class="facebook-btn"><i class="fa fa-facebook" aria-hidden="true"></i> Login with Facebook</button></a>
+
+      <a href="/shop" class="btn btn-danger" type="button">skip</a>
+    </div>
+  </form>
+</div>
+
+ <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
-
-
-<!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
 </html>
+{%endblock%}
