--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -14,7 +14,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" id="nav">Welcome To My Awesome Cart !!</a>
+<a class="navbar-brand"><h5 id="nav">Welcome To My Awesome Cart !!</h5></a>
 </nav>
 
 
