--- a/templates/shop/success1.html
+++ b/templates/shop/success1.html
@@ -1,6 +1,6 @@
 {% load static %}
 <img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
-<div class="text"><h1>Your Have Successfully Submitted The Form</h1></div>
+<div class="text"><h1>Your Have Successfully Submitted The Form<br><button type="button" onclick="history.back()"><u>Go Back</u></button></h1></div>
 
 <style>
 body{
