--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -3,12 +3,60 @@
 {%if user.is_authenticated%}
 {% for order in order %}
 {% if request.user.id == order.order_uid %}
-<div class="column">
-	<img src="/media/{{order.product_image}}" width="287px" height="300px">
-  <h5>Product Name:-{{order.product_name}}</h5>
-  <h6>Price:-{{order.product_price}}</h6>
-  <a href="/shop/productview/{{order.order_id}}"><button class="btn btn-primary">View Product</button></a><br><br><br><br>
+
+
+<style>
+#img{
+	position: relative;
+	left: -70px;
+}
+</style>
+<div class="container my-5">
+    <div class="row">
+    <div class="col-md-4">
+    <div class="row">
+        <img src="/media/{{order.product_image}}" width="280px" height="300px" id="img">
+    </div>
+
+
+    </div>
+
+    <div class="col-md-8">
+        <h4 id="img"><b>Title:-</b>{{order.product_name}}</h4><br>
+        
+        <h5 id="img"><b>Price:-</b>${{order.product_price}}</h5><br>
+
+        <a href="/shop/productview/{{order.order_id}}"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-primary mx-3">View Product</button></p></a>
+
+		<a type="button" data-toggle="modal" data-target="#order"><p style="margin-left:-1.9em;position:relative;left:-60px;"><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
+
+
+				            <div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		              <div class="modal-dialog" role="document">
+		                <div class="modal-content">
+		                  <div class="modal-header">
+		                    <h5 class="modal-title" id="exampleModalLabel"><p style="color:red;"><u>WARNING</u></p></h5>
+		                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		                      <span aria-hidden="true">&times;</span>
+		                    </button>
+		                  </div>
+		                  <div class="modal-body"><b>
+		                    Are You Sure To Cancel This Order?</b>
+		                  </div>
+		                  <div class="modal-footer">
+		                    <a href="/shop/delete/{{order.order_id}}"><button class="btn btn-danger">Yes,I am Sure</button></a>
+		                  </div>
+		                </div>
+		              </div>
+		            </div>
+
+
 </div>
+
+    </div>
+</div>
+
+
 {% endif %}
 {% endfor %}
 {%else%}
