--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -2,7 +2,8 @@
 {%block body%}
 {%if user.is_authenticated%}
 {% for order in order %}
-{% if request.user.id == order.order_uid %}
+{% if request.user.id == order.user_uid %}
+
 
 <style>
 #img{
@@ -43,7 +44,7 @@
 		                    Are You Sure To Cancel This Order?</b>
 		                  </div>
 		                  <div class="modal-footer">
-		                    <a href="/shop/delete/{{order.order_id}}"><button class="btn btn-danger">Yes,I am Sure</button></a>
+		                    <a href="/shop/delete/{{order.order_id}}"><button class="btn btn-danger mx-3">Yes,I am Sure</button></a>
 		                  </div>
 		                </div>
 		              </div>
