--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -11,7 +11,7 @@
 <meta name="apple-mobile-web-app-title" content="CodePen">
 
 
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
 <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
@@ -365,7 +365,7 @@ html { height: 100%;}
 
        <li><a href="/shop/about"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i> About Us</a></li>
 
-       <li><a href="/shop/contact"><i class='fas fa-blender-phone'></i> Contact Us</a></li>
+       <li><a href="/shop/contact"><i class="material-icons" style="font-size:18px;">contacts</i> Contact us</a></li>
 
 
        <li><a href="/shop/cart"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>My cart</a></li>
