--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -33,8 +33,8 @@ h4,h5,a{
 </style>
 
 <br>
-<div class="d-flex position-relative">
-  <img src="/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
+<div class="d-flex position-relative mx-1">
+  <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
     <h4 class="mt-0">Product Name:-<b><u>{{order.product_name}}</u></b></h4>
     <h5>Price:-<b><u>{{order.product_price}}</u></b></h6>
